--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppChat</string>
+    <string name="facebook_app_id">2267572406804444</string>
+    <string name="fb_login_protocol_scheme">fb2267572406804444</string>
 </resources>
